<resources>
    <string name="app_name">My Application</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forgotPsw">忘记密码</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="action_settings">setting</string>
    <string name="addItemHint">New To Do Item</string>
    <string name="addItemContentDescription">New To Do Item</string>
    <string name="weixin">微信</string>
    <string name="pengyou">朋友</string>
</resources>
