<?xml version="1.0" encoding ="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <fragment
        android:name="com.example.wangyinbao.myapplication.TitleFragmet"
        android:id="@+id/title_fragmet"
        android:layout_width="400dp"
        android:layout_height="50dp">

    </fragment>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myEditText"
        android:hint="@string/addItemHint"
        android:contentDescription="@string/addItemContentDescription"
        />

    <ListView
        android:id="@+id/myListView"
        android:layout_width="match_parent"
        android:layout_height="500dp">
    </ListView>

    <FrameLayout
        android:id="@+id/id_content"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="50dp">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#000">

        <Button
            android:id="@+id/weixin"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/weixin">
        </Button>
        <Button
            android:id="@+id/pengyou"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/pengyou">
        </Button>


    </LinearLayout>




    </RelativeLayout>