<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@drawable/bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!--<android.support.v7.widget.Toolbar-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:layout_width="match_parent"-->
        <!--android:id="@+id/my_toolbar"-->
        <!--android:background="#000"-->
        <!--android:elevation="4dp"-->
        <!--app:popupTheme="@style/AlertDialog.AppCompat.Light"-->
        <!--&gt;-->

    <!--</android.support.v7.widget.Toolbar>-->
    <android.support.v7.widget.CardView
        android:layout_width="500dp"
        android:layout_height="700dp"
        android:layout_centerInParent="true"
        android:id="@+id/cv">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_marginTop="200dp"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <View
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="#2fa881">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:text="LOGIN"
                    android:textColor="#FFCC00"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="50dp"
                android:paddingRight="30dp"
                android:orientation="horizontal"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">
                    <EditText
                        android:textSize="13sp"
                        android:hint="Username"
                        android:textColor="#2fa881"
                        android:id="@+id/et_username"
                        android:inputType="text"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:background="@drawable/selector_bg_edit"
                        android:paddingBottom="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="#c5c5c5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="13sp"
                        android:hint= "Password"
                        android:textColor="#2fa881"
                        android:paddingBottom="2dp"
                        android:id="@+id/et_password"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="120dp"
                android:layout_marginTop="24dp">
                <Button
                    android:layout_width="150dp"
                    android:id="@+id/bt_go"
                    android:text="@string/login"
                    android:textColor="#4e4d4d"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animation_z"
                    android:layout_height="50dp"
                    android:gravity="center"/>
                <Button
                    android:layout_marginTop="60dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/register"
                    android:textColor="#4e4d4d"
                    android:background="@drawable/bt_shape"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#9a9a9a"
                android:textSize="12sp"
                android:text="@string/forgotPsw"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>


















